publicando el ocular

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ title: Portada
             <a href="/category/enciclopedia/"><img class="img-fluid" src="/assets/images/banners/banner2.jpg" alt="Enciclopedia Eorzea"></a>
         </div>
         <div class="col-lg-4 col-md-6 mb-30px card-group" align="center">
-            <img class="img-fluid" src="/assets/images/banners/banner1.jpg" alt="El Ocular">
+            <a href="/category/ocular/"><img class="img-fluid" src="/assets/images/banners/banner1.jpg" alt="El Ocular"></a>
         </div>        
         <div class="col-lg-4 col-md-6 mb-30px card-group" align="center">
             <a href="/category/relatos/"><img class="img-fluid" src="/assets/images/banners/banner3.jpg" alt="Relatos"></a>
